# database-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  glama.json  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-py.yml  release.yml
conformance/: cases.json  leak-check.mjs  leak-libsql.mjs  leak-mysql.mjs  leak-postgres.mjs  package.json  run.mjs
conformance/fixtures/: seed.mysql.sql  seed.postgres.sql  seed.sqlite.sql
core/python/: CHANGELOG.md  README.md  pyproject.toml
core/python/src/database_mcp_core/: __init__.py  adapter.py  config.py  secret.py  serve.py  server.py  sql_guard.py
core/python/tests/: test_security.py
core/typescript/: CHANGELOG.md  README.md  package.json
core/typescript/src/: adapter.ts  config.ts  index.ts  secret.ts  serve.ts  sql-guard.ts
core/typescript/src/tools/: execute-sql.ts  search-objects.ts
core/typescript/test/: security.test.mjs
docs/: architecture.md  tool-contract.md
libsql/: server.json
libsql/python/: CHANGELOG.md  README.md  pyproject.toml
libsql/python/src/database_mcp_libsql/: __init__.py  adapter.py
libsql/typescript/: CHANGELOG.md  README.md  package.json  server.json  tsconfig.json
libsql/typescript/src/: adapter.ts  index.ts
mariadb/: server.json
mariadb/python/: CHANGELOG.md  README.md  pyproject.toml
mariadb/python/src/database_mcp_mariadb/: __init__.py  adapter.py
mariadb/typescript/: CHANGELOG.md  README.md  package.json  server.json
mariadb/typescript/src/: adapter.ts  index.ts
mysql/: server.json
mysql/python/: CHANGELOG.md  README.md  pyproject.toml
mysql/python/src/database_mcp_mysql/: __init__.py  adapter.py
mysql/typescript/: CHANGELOG.md  README.md  package.json  server.json  tsconfig.json
mysql/typescript/src/: adapter.ts  index.ts
postgres/: server.json
postgres/python/: CHANGELOG.md  README.md  pyproject.toml
postgres/python/src/database_mcp_postgres/: __init__.py  adapter.py
postgres/typescript/: CHANGELOG.md  README.md  package.json  server.json
postgres/typescript/src/: adapter.ts  index.ts
scripts/: bump-version.mjs
sqlite/: server.json
sqlite/python/: CHANGELOG.md  README.md  pyproject.toml
sqlite/python/src/database_mcp_sqlite/: __init__.py  adapter.py
sqlite/typescript/: CHANGELOG.md  README.md  package.json  server.json
sqlite/typescript/src/: adapter.ts  config.ts  index.ts  server.ts
sqlite/typescript/src/adapters/: sqlite.ts
sqlite/typescript/src/tools/: execute-sql.ts
