[project]
name = "database-mcp-core"
version = "0.1.0"
description = "Engine-agnostic core for database-mcp MCP servers: protocol layer, adapter interface, guardrails, SQL guard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ariful Islam" }]
keywords = ["mcp", "model-context-protocol", "database", "sql"]
dependencies = ["mcp>=1.9", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/arifulislamat/database-mcp#readme"
Repository = "https://github.com/arifulislamat/database-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database_mcp_core"]

[dependency-groups]
dev = ["pytest>=8"]
