[project]
name = "database-mcp-libsql"
version = "0.1.0"
description = "MCP server for libSQL/Turso (local files and remote databases) with read-only guardrails, row caps, and statement timeouts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ariful Islam" }]
keywords = ["mcp", "model-context-protocol", "libsql", "turso", "sqlite", "database", "sql"]
dependencies = ["database-mcp-core>=0.1.0", "libsql>=0.1.11"]

[project.scripts]
database-mcp-libsql = "database_mcp_libsql:main"

[project.urls]
Homepage = "https://github.com/arifulislamat/database-mcp#readme"
Repository = "https://github.com/arifulislamat/database-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database_mcp_libsql"]

[tool.uv.sources]
database-mcp-core = { workspace = true }
