[project]
name = "database-mcp-mariadb"
version = "0.1.0"
description = "MCP server for MariaDB with read-only guardrails, row caps, and statement timeouts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ariful Islam" }]
keywords = ["mcp", "model-context-protocol", "mariadb", "mysql", "database", "sql"]
dependencies = ["database-mcp-core>=0.1.0", "database-mcp-mysql>=0.1.0"]

[project.scripts]
database-mcp-mariadb = "database_mcp_mariadb:main"

[project.urls]
Homepage = "https://github.com/arifulislamat/database-mcp#readme"
Repository = "https://github.com/arifulislamat/database-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database_mcp_mariadb"]

[tool.uv.sources]
database-mcp-core = { workspace = true }
database-mcp-mysql = { workspace = true }
