[project]
name = "database-mcp-mysql"
version = "0.1.0"
description = "MCP server for MySQL with read-only guardrails, row caps, and statement timeouts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ariful Islam" }]
keywords = ["mcp", "model-context-protocol", "mysql", "database", "sql"]
dependencies = ["database-mcp-core>=0.1.0", "pymysql>=1.1"]

[project.scripts]
database-mcp-mysql = "database_mcp_mysql:main"

[project.urls]
Homepage = "https://github.com/arifulislamat/database-mcp#readme"
Repository = "https://github.com/arifulislamat/database-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database_mcp_mysql"]

[tool.uv.sources]
database-mcp-core = { workspace = true }
