[project]
name = "database-mcp-postgres"
version = "0.1.0"
description = "MCP server for PostgreSQL with read-only guardrails, row caps, and statement timeouts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ariful Islam" }]
keywords = ["mcp", "model-context-protocol", "postgres", "postgresql", "database", "sql"]
dependencies = ["database-mcp-core>=0.1.0", "psycopg[binary]>=3.1"]

[project.scripts]
database-mcp-postgres = "database_mcp_postgres:main"

[project.urls]
Homepage = "https://github.com/arifulislamat/database-mcp#readme"
Repository = "https://github.com/arifulislamat/database-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database_mcp_postgres"]

[tool.uv.sources]
database-mcp-core = { workspace = true }
