[project]
name = "database-mcp-sqlite"
version = "0.1.0"
description = "MCP server for SQLite with read-only guardrails, row caps, and statement timeouts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Ariful Islam" }]
keywords = ["mcp", "model-context-protocol", "sqlite", "database", "sql"]
dependencies = ["database-mcp-core>=0.1.0"]

[project.scripts]
database-mcp-sqlite = "database_mcp_sqlite:main"

[project.urls]
Homepage = "https://github.com/arifulislamat/database-mcp#readme"
Repository = "https://github.com/arifulislamat/database-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database_mcp_sqlite"]

[tool.uv.sources]
database-mcp-core = { workspace = true }
